# rusted

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
.devcontainer/: devcontainer.json
.github/workflows/: cargo-deps-update.yml  flake-update.yml
src/: main.rs
