[package]
name = "rusted"
version = "0.1.0"
authors = ["anntnzrb <anntnzrb@proton.me>"]
edition = "2021"
description = "A template for Haskell projects using Nix"
readme = "README.md"
homepage = "https://github.com/anntnzrb/rusted"
repository = "https://github.com/anntnzrb/rusted"
license-file = "COPYING"
keywords = ["testing"]
categories = ["testing"]

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
