[package]
name = "rusted"
version = "0.1.0"
authors = ["anntnzrb <anntnzrb@proton.me>"]
edition = "2021"
description = "A template for Haskell projects using Nix"
readme = "README.md"
homepage = "https://github.com/anntnzrb/rusted"
repository = "https://github.com/anntnzrb/rusted"
license-file = "COPYING"
keywords = ["testing"]
categories = ["testing"]

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
color-eyre = { version = "0.6.2", default-features = false }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"
cargo = "deny"

enum_glob_use = "deny"
unwrap_used = "deny"

# eyre
[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = 'abort'
strip = 'symbols'
